Add booking routes and serverless-http package
