# docs/openAPI.yaml
@@ -23,20 +23,6 @@ paths:
           schema:
             type: string
             format: date
-        - name: start_date
-          in: query
-          description: The start date of the range for which time slots are requested (YYYY-MM-DD).
-          required: false
-          schema:
-            type: string
-            format: date
-        - name: end_date
-          in: query
-          description: The end date of the range for which time slots are requested (YYYY-MM-DD).
-          required: false
-          schema:
-            type: string
-            format: date
       responses:
         "200":
           description: Successful response with available time slots.
@@ -45,44 +31,27 @@ paths:
               example:
                 success: true
                 data:
+                "booking_by_date":
                   "2024-12-15":
-                    - id: "12345"
-                      start_time: "08:00"
-                      end_time: "09:30"
-                      status: "booked"
+                    - _id: "12345"
                       guest_name: "Alex Xu"
                       guest_phone: "+91-9876543210"
                       guest_email: "Alex@email.com"
+                      booking_date: "2024-01-28"
+                      start_time: "8"
+                      end_time: "9"
+                      sports: "Cricket"
                       attendees: 10
-                      sports: "Cricket"
-                    - id: "4567"
-                      start_time: "10:00"
-                      end_time: "12:00"
-                      status: "booked"
-                      guest_name: "Sam Lahm"
-                      guest_phone: "+91-9123456780"
-                      guest_email: "sam@email.com"
-                      attendees: 12
-                      sports: "Cricket"
-                  "2024-12-20":
-                    - id: "11115"
-                      start_time: "08:00"
-                      end_time: "09:40"
-                      status: "booked"
-                      guest_name: "Alex Xu"
-                      guest_phone: "+91-9876543210"
-                      guest_email: "Alex@email.com"
-                      attendees: 10
-                      sports: "Football"
-                    - id: "922567"
-                      start_time: "10:00"
-                      end_time: "12:00"
-                      status: "booked"
-                      guest_name: "Sam Lahm"
-                      guest_phone: "+91-9123456780"
-                      guest_email: "sam@email.com"
-                      attendees: 12
-                      sports: "Cricket"
+                      status: "CONFIRMED"
+                      admin_id: "65b646e7ef56fc00ce98df42"
+                "admin_by_id":
+                  "65b646e7ef56fc00ce98df42": 
+                    _id: "65b646e7ef56fc00ce98df42"
+                    username: "admin_1"
+                    name: "Tars"
+                    phone: "1234567890"
+                    email: "admin_1@email.com"
+            
 
         "400":
           description: Bad request, invalid date format or missing parameter.
